--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@prisma/client": "^5.21.1",
     "@prisma/extension-accelerate": "^1.2.1",
+    "@types/bcryptjs": "^2.4.6",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "hono": "^4.5.11"
