--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "flowbite": "^2.5.2",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "@types/node": "^20",
