--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.28.0",
     "react-toastify": "^10.0.6"
   },
   "devDependencies": {
