--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,8 @@
     "flowbite": "^2.5.2",
     "font-awesome": "^4.7.0",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.28.0",
     "react-toastify": "^10.0.6"
